# code-morph

./: .gitignore  CLAUDE.md  DEMO_GUIDE.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PROGRESS.md  QUICKSTART.md  RAG_IMPLEMENTATION.md  README.md  SIMPLIFICATION_PLAN.md  SIMPLIFICATION_SUMMARY.md  STATUS.md  claude.md  codemorph_mcp.py  demo.py  demo_phase1.py  demo_phase2.py  demo_phase3.py  fix_assembly.py  javatuples_config.yaml  poc_config.yaml  pyproject.toml  resume_javatuples.py  retranslate_overloads.py  run_phase4.py  run_phase4_opencode.sh  test_j2p_config.yaml  test_p2j_config.yaml  test_pipeline_e2e.py  tictactoe_config.yaml
.claude/: settings.local.json
examples/bootstrap_examples/: java_collections.json  java_error_handling.json
examples/java_project/: pom.xml
examples/java_project_translated/: string_utils.py  test_string_utils.py
examples/java_test_project/: MathUtils.java
examples/javatuples/src/: Decade.java  Ennead.java  IValue0.java  IValue1.java  IValue2.java  IValue3.java  IValue4.java  IValue5.java  IValue6.java  IValue7.java  IValue8.java  IValue9.java  IValueKey.java  IValueLabel.java  IValueValue.java  KeyValue.java  LabelValue.java  Octet.java  Pair.java  Quartet.java  Quintet.java  Septet.java  Sextet.java  Triplet.java  Tuple.java  Unit.java
examples/javatuples/tests/: Test.java
examples/python_project/: calculator.py  test_calculator.py
examples/test_j2p/: Factorial.java  TaskManager.java
examples/test_p2j/: fibonacci.py  inventory.py
examples/thealgorithms_java/src/: AbsoluteMax.java  AbsoluteMin.java  AbsoluteValue.java  Armstrong.java  Average.java  BinomialCoefficient.java  Ceil.java  DigitalRoot.java  Factorial.java  FindMax.java  FindMin.java  Floor.java  GCD.java  GCDRecursion.java  MaxValue.java  MinValue.java  NumberOfDigits.java  PalindromeNumber.java  ParseInteger.java  (+6 more)
tests/integration/: test_basic_workflow.py
tests/unit/: test_feature_mapper.py  test_phase2_orchestrator.py  test_phase3_components.py  test_semantic_fixer.py  test_state_persistence.py
(+76 files in other folders)
